--- a/57059.Sosa.Gabriel/Dockerfile
+++ b/57059.Sosa.Gabriel/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3
 
-RUN git clone https://github.com/Gabisosa97/Parcial.1.git
+RUN git clone https://github.com/Gabisosa97/Parcial.git
 
 WORKDIR /Parcial.1
 
