--- a/57059.Sosa.Gabriel/Dockerfile
+++ b/57059.Sosa.Gabriel/Dockerfile
@@ -2,6 +2,6 @@ FROM python:3
 
 RUN git clone https://github.com/Gabisosa97/Parcial.git
 
-WORKDIR /Parcial.1
+WORKDIR /Parcial
 
 CMD ["python3", "test_book.py"]
