--- a/57059.Sosa.Gabriel/Dockerfile
+++ b/57059.Sosa.Gabriel/Dockerfile
@@ -4,4 +4,4 @@ RUN git clone https://github.com/Gabisosa97/Parcial.git
 
 WORKDIR /Parcial
 
-CMD ["python3", "test_book.py"]
+CMD ["python3", "test_book.py"] && ["python3", "test_member.py"]
