--- a/59081.Sanchez.Toledo.Mariano/dockerfile
+++ b/59081.Sanchez.Toledo.Mariano/dockerfile
@@ -4,6 +4,6 @@ WORKDIR /app
 
 RUN git clone https://github.com/AgnidDrage/Parcial.1.git
 
-WORKDIR /app/Parcial.1
+WORKDIR /app/Parcial.1/59081.Sanchez.Toledo.Mariano
 
 CMD ["python3", "test_book.py"] && ["python3", "test_members.py"]
